<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundForms">


    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:fontFamily="serif"
        android:paddingLeft="12dp"
        android:paddingTop="25dp"
        android:paddingRight="12dp"
        android:text="@string/feedbacktitle"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextFirstName"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:hint="@string/feedbackfirstname"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewTitle" />

    <EditText
        android:id="@+id/EditTextLastName"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:hint="@string/feedbacklastname"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextFirstName" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/feedbackemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextLastName" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="242dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:numStars="5"
        android:rating="2.0"
        android:stepSize="1.0"
        app:layout_constraintStart_toEndOf="@+id/rateUs"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerFeedbackType" />

    <Spinner
        android:id="@+id/SpinnerFeedbackType"
        android:layout_width="fill_parent"
        android:layout_height="58dp"
        android:layout_marginTop="14dp"
        android:entries="@array/feedbacktypelist"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:prompt="@string/feedbacktype"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail" />

    <EditText
        android:id="@+id/EditTextFeedbackBody"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/feedbackbody"
        android:lines="5"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBoxResponse" />

    <CheckBox
        android:id="@+id/CheckBoxResponse"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:paddingLeft="6dp"
        android:text="@string/feedbackresponse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/buttonSendFeedback"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/sendButton"
        android:onClick="sendFeedback"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextFeedbackBody" />

    <TextView
        android:id="@+id/rateUs"
        android:layout_width="80dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="Rating"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinnerFeedbackType" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>