<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundForms"
    tools:context=".form3page">

    <TextView
        android:id="@+id/form3title"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:paddingLeft="12dp"
        android:paddingTop="25dp"
        android:paddingRight="12dp"
        android:text="@string/form3title"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextFirstName"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:hint="@string/feedbackfirstname"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form3title" />

    <EditText
        android:id="@+id/EditTextLastName"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="serif"
        android:hint="@string/feedbacklastname"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextFirstName" />

    <EditText
        android:id="@+id/EditTextPhone"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/phoneNumber"
        android:inputType="textPhonetic"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextLastName" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/feedbackemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPhone" />

    <EditText
        android:id="@+id/EditTextFeedbackBody"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="comments"
        android:lines="5"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail" />

    <Button
        android:id="@+id/ButtonSendFeedback"
        android:layout_width="86dp"
        android:layout_height="41dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/sendButton"
        android:onClick="sendFeedback"
        android:text="@string/feedbackbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextFeedbackBody" />
</androidx.constraintlayout.widget.ConstraintLayout>